# fic2-poc-ideaas-c9hub-rest

./: .bowerrc  .gitignore  Dockerfile  Makefile  README.md  bower.json  requirements.txt  setup.cfg
c9hubapi/: main.py
c9hubapi/db/: models.py
c9hubapi/resources/: ide.py  ides.py  validation_endpoints.py
c9hubapi/resources/etc/: c9hub.default.yaml
c9hubapi/resources/templates/: DockerFile_git_clone.txt
c9hubapi/rest/: api.py
c9hubapi/templates/: cloud9_extra_conf.json  nginx_ide_referer.conf  nginx_ide_server.conf
c9hubdashboard/: main.py
c9hubdashboard/forms/: forms.py
c9hubdashboard/html/: api.py
c9hubdashboard/resources/etc/: c9hubdashboard.default.yaml
c9hubdashboard/static/js/: app.js
c9hubdashboard/templates/: error.html  index.html  layout.html  listing.html  waitingroom.html
etc/: base.yaml  clean_ides_container.service  clean_ides_container.timer  cron.conf  filab_oauth.yaml
etc/docker/: docker-registry.service  filab.deploy.txt
etc/docker/c9hub-common/: Dockerfile  Makefile
etc/docker/c9hub-nginx/: Dockerfile  Makefile
etc/docker/c9hub-nginx/app/: Procfile  nginx_ides.tmpl
etc/docker/c9hub-nginx/nginx/: nginx.conf
etc/docker/c9hub-nginx/nginx/cert/: server.crt  server.csr  server.key  server.key.with_password
etc/docker/c9hub-nginx/nginx/sites-enabled/: dashboard.conf
etc/oauth_doorkeeper/: 0001-Tweak-to-use-thin-for-ssl-support.patch  0002-Adding-a-new-app-in-seeds.patch
