[metadata]
name = tai-c9hub-rest
author = Tai
author-email = tai@tai.org
summary = cloud9 hub
description-file = README
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
	Programming Language :: Python :: 3.3

[files]
packages =
    c9hubapi
    c9hubdashboard

[entry_points]
console_scripts =
    c9hub-api = c9hubapi.main:main
    c9hub-dashboard = c9hubdashboard.main:main 